--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/src/assets/ll.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio-Livia Luciani</title>
+    <title>Livia Luciani Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
